--- a/JupyterNotebooks/icpr-imagenet.ipynb
+++ b/JupyterNotebooks/icpr-imagenet.ipynb
@@ -303,6 +303,26 @@
     "    return model\n",
     "\n",
     "\n",
+    "class Mish(nn.Module):\n",
+    "    def forward(self, x):\n",
+    "        return x * torch.tanh(torch.nn.functional.softplus(x))\n",
+    "    \n",
+    "class DSReLU(nn.Module):\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    def __init__(self, k=5):\n",
+    "        super(DSReLU, self).__init__()\n",
+    "        self.a = torch.tensor(math.tan(math.radians(75)), dtype=torch.float32, device=device)\n",
+    "        self.b = torch.tensor(math.tan(math.radians(30)), dtype=torch.float32, device=device)\n",
+    "        self.k = k\n",
+    "        self.t = 0\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        t_tensor = torch.tensor(self.t, dtype=x.dtype, device=x.device)\n",
+    "        s_t = self.a + (self.b - self.a) / (1 + torch.exp(-self.k * (t_tensor - 0.5)))\n",
+    "        return torch.where(x > 0, x * s_t, x)\n",
+    "\n",
+    "    def increment_t(self, num_batches):\n",
+    "        self.t += 1 / num_batches\n",
     "\n"
    ]
   },
@@ -611,29 +631,7 @@
     "    \n",
     "    model = train_model(resnet_model, train_loader, val_loader, criterion, optimizer, num_epochs=num_epochs, \n",
     "                        activation_fn_name=activation_fn_name, device=device, patience=patience)\n",
-    "    return model \n",
-    "\n",
-    "\n",
-    "class Mish(nn.Module):\n",
-    "    def forward(self, x):\n",
-    "        return x * torch.tanh(torch.nn.functional.softplus(x))\n",
-    "    \n",
-    "class DSReLU(nn.Module):\n",
-    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "    def __init__(self, k=10):\n",
-    "        super(DSReLU, self).__init__()\n",
-    "        self.a = torch.tensor(math.tan(math.radians(80)), dtype=torch.float32, device=device)\n",
-    "        self.b = torch.tensor(math.tan(math.radians(15)), dtype=torch.float32, device=device)\n",
-    "        self.k = k\n",
-    "        self.t = 0\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        t_tensor = torch.tensor(self.t, dtype=x.dtype, device=x.device)\n",
-    "        s_t = self.a + (self.b - self.a) / (1 + torch.exp(-self.k * (t_tensor - 0.5)))\n",
-    "        return torch.where(x > 0, x * s_t, x)\n",
-    "\n",
-    "    def increment_t(self, num_batches):\n",
-    "        self.t += 1 / num_batches"
+    "    return model "
    ]
   },
   {
