--- a/JupyterNotebooks/icpr-cifar-ipynb.ipynb
+++ b/JupyterNotebooks/icpr-cifar-ipynb.ipynb
@@ -292,157 +292,26 @@
     "    return model\n",
     "\n",
     "\n",
-    "# __all__ = ['ResNet', 'resnet34']\n",
+    "class Mish(nn.Module):\n",
+    "    def forward(self, x):\n",
+    "        return x * torch.tanh(torch.nn.functional.softplus(x))\n",
+    "    \n",
+    "class DSReLU(nn.Module):\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    def __init__(self, k=5):\n",
+    "        super(DSReLU, self).__init__()\n",
+    "        self.a = torch.tensor(math.tan(math.radians(75)), dtype=torch.float32, device=device)\n",
+    "        self.b = torch.tensor(math.tan(math.radians(30)), dtype=torch.float32, device=device)\n",
+    "        self.k = k\n",
+    "        self.t = 0\n",
     "\n",
-    "# def conv3x3(in_planes, out_planes, stride=1):\n",
-    "#     \"\"\"3x3 convolution with padding\"\"\"\n",
-    "#     return nn.Conv2d(in_planes, out_planes, kernel_size=3, stride=stride,\n",
-    "#                      padding=1, bias=False)\n",
+    "    def forward(self, x):\n",
+    "        t_tensor = torch.tensor(self.t, dtype=x.dtype, device=x.device)\n",
+    "        s_t = self.a + (self.b - self.a) / (1 + torch.exp(-self.k * (t_tensor - 0.5)))\n",
+    "        return torch.where(x > 0, x * s_t, x)\n",
     "\n",
-    "# class BasicBlock(nn.Module):\n",
-    "#     expansion = 1\n",
-    "\n",
-    "#     def __init__(self, inplanes, planes, activation_fn, stride=1, downsample=None, dropout_prob=0.5):\n",
-    "#         super(BasicBlock, self).__init__()\n",
-    "#         self.conv1 = conv3x3(inplanes, planes, stride)\n",
-    "#         self.bn1 = nn.BatchNorm2d(planes)\n",
-    "#         self.activation_fn = activation_fn()\n",
-    "#         self.conv2 = conv3x3(planes, planes)\n",
-    "#         self.bn2 = nn.BatchNorm2d(planes)\n",
-    "#         self.downsample = downsample\n",
-    "#         self.stride = stride\n",
-    "#         self.dropout = nn.Dropout(dropout_prob)\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         residual = x\n",
-    "\n",
-    "#         out = self.conv1(x)\n",
-    "#         out = self.bn1(out)\n",
-    "#         out = self.activation_fn(out)\n",
-    "#         out = self.dropout(out)\n",
-    "\n",
-    "#         out = self.conv2(out)\n",
-    "#         out = self.bn2(out)\n",
-    "\n",
-    "#         if self.downsample is not None:\n",
-    "#             residual = self.downsample(x)\n",
-    "\n",
-    "#         out += residual\n",
-    "#         out = self.activation_fn(out)\n",
-    "#         out = self.dropout(out)\n",
-    "\n",
-    "#         return out\n",
-    "\n",
-    "# class Bottleneck(nn.Module):\n",
-    "#     expansion = 4\n",
-    "\n",
-    "#     def __init__(self, inplanes, planes, activation_fn, stride=1, downsample=None, dropout_prob=0.5):\n",
-    "#         super(Bottleneck, self).__init__()\n",
-    "#         self.conv1 = nn.Conv2d(inplanes, planes, kernel_size=1, bias=False)\n",
-    "#         self.bn1 = nn.BatchNorm2d(planes)\n",
-    "#         self.conv2 = nn.Conv2d(planes, planes, kernel_size=3, stride=stride,\n",
-    "#                                padding=1, bias=False)\n",
-    "#         self.bn2 = nn.BatchNorm2d(planes)\n",
-    "#         self.conv3 = nn.Conv2d(planes, planes * 4, kernel_size=1, bias=False)\n",
-    "#         self.bn3 = nn.BatchNorm2d(planes * 4)\n",
-    "#         self.activation_fn = activation_fn()\n",
-    "#         self.downsample = downsample\n",
-    "#         self.stride = stride\n",
-    "#         self.dropout = nn.Dropout(dropout_prob)\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         residual = x\n",
-    "\n",
-    "#         out = self.conv1(x)\n",
-    "#         out = self.bn1(out)\n",
-    "#         out = self.activation_fn(out)\n",
-    "#         out = self.dropout(out)\n",
-    "\n",
-    "#         out = self.conv2(out)\n",
-    "#         out = self.bn2(out)\n",
-    "#         out = self.activation_fn(out)\n",
-    "#         out = self.dropout(out)\n",
-    "\n",
-    "#         out = self.conv3(out)\n",
-    "#         out = self.bn3(out)\n",
-    "\n",
-    "#         if self.downsample is not None:\n",
-    "#             residual = self.downsample(x)\n",
-    "\n",
-    "#         out += residual\n",
-    "#         out = self.activation_fn(out)\n",
-    "#         out = self.dropout(out)\n",
-    "\n",
-    "#         return out\n",
-    "\n",
-    "# class ResNet(nn.Module):\n",
-    "\n",
-    "#     def __init__(self, block, layers, activation_fn, num_classes=1000, dropout_prob=0.5):\n",
-    "#         self.inplanes = 64\n",
-    "#         super(ResNet, self).__init__()\n",
-    "#         self.conv1 = nn.Conv2d(3, 64, kernel_size=7, stride=2, padding=3,\n",
-    "#                                bias=False)\n",
-    "#         self.bn1 = nn.BatchNorm2d(64)\n",
-    "#         self.activation_fn = activation_fn()\n",
-    "#         self.maxpool = nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
-    "#         self.layer1 = self._make_layer(block, 64, layers[0], activation_fn, dropout_prob=dropout_prob)\n",
-    "#         self.layer2 = self._make_layer(block, 128, layers[1], activation_fn, stride=2, dropout_prob=dropout_prob)\n",
-    "#         self.layer3 = self._make_layer(block, 256, layers[2], activation_fn, stride=2, dropout_prob=dropout_prob)\n",
-    "#         self.layer4 = self._make_layer(block, 512, layers[3], activation_fn, stride=2, dropout_prob=dropout_prob)\n",
-    "#         self.avgpool = nn.AdaptiveAvgPool2d((1, 1))  # Changed to AdaptiveAvgPool2d\n",
-    "#         self.fc = nn.Linear(512 * block.expansion, num_classes)\n",
-    "#         self.dropout = nn.Dropout(dropout_prob)\n",
-    "\n",
-    "#         for m in self.modules():\n",
-    "#             if isinstance(m, nn.Conv2d):\n",
-    "#                 n = m.kernel_size[0] * m.kernel_size[1] * m.out_channels\n",
-    "#                 m.weight.data.normal_(0, math.sqrt(2. / n))\n",
-    "#             elif isinstance(m, nn.BatchNorm2d):\n",
-    "#                 m.weight.data.fill_(1)\n",
-    "#                 m.bias.data.zero_()\n",
-    "\n",
-    "#     def _make_layer(self, block, planes, blocks, activation_fn, stride=1, dropout_prob=0.5):\n",
-    "#         downsample = None\n",
-    "#         if stride != 1 or self.inplanes != planes * block.expansion:\n",
-    "#             downsample = nn.Sequential(\n",
-    "#                 nn.Conv2d(self.inplanes, planes * block.expansion,\n",
-    "#                           kernel_size=1, stride=stride, bias=False),\n",
-    "#                 nn.BatchNorm2d(planes * block.expansion),\n",
-    "#             )\n",
-    "\n",
-    "#         layers = []\n",
-    "#         layers.append(block(self.inplanes, planes, activation_fn, stride, downsample, dropout_prob))\n",
-    "#         self.inplanes = planes * block.expansion\n",
-    "#         for i in range(1, blocks):\n",
-    "#             layers.append(block(self.inplanes, planes, activation_fn, dropout_prob=dropout_prob))\n",
-    "\n",
-    "#         return nn.Sequential(*layers)\n",
-    "\n",
-    "#     def forward(self, x):\n",
-    "#         x = self.conv1(x)\n",
-    "#         x = self.bn1(x)\n",
-    "#         x = self.activation_fn(x)\n",
-    "#         x = self.maxpool(x)\n",
-    "\n",
-    "#         x = self.layer1(x)\n",
-    "#         x = self.layer2(x)\n",
-    "#         x = self.layer3(x)\n",
-    "#         x = self.layer4(x)\n",
-    "\n",
-    "#         x = self.avgpool(x)\n",
-    "#         x = x.view(x.size(0), -1)\n",
-    "#         x = self.fc(x)\n",
-    "\n",
-    "#         return x\n",
-    "\n",
-    "# def resnet34(activation_fn=nn.ReLU, pretrained=False, dropout_prob=0.25, **kwargs):\n",
-    "#     \"\"\"Constructs a ResNet-34 model.\n",
-    "#     Args:\n",
-    "#         activation_fn (nn.Module): Activation function to use\n",
-    "#         dropout_prob (float): Dropout probability\n",
-    "#     \"\"\"\n",
-    "#     model = ResNet(BasicBlock, [3, 4, 6, 3], activation_fn, dropout_prob=dropout_prob, **kwargs)\n",
-    "#     return model"
+    "    def increment_t(self, num_batches):\n",
+    "        self.t += 1 / num_batches"
    ]
   },
   {
@@ -661,29 +530,7 @@
     "    \n",
     "    model = train_model(resnet_model, train_loader, val_loader, criterion, optimizer, num_epochs=num_epochs, \n",
     "                        activation_fn_name=activation_fn_name, device=device, patience=patience)\n",
-    "    return model \n",
-    "\n",
-    "\n",
-    "class Mish(nn.Module):\n",
-    "    def forward(self, x):\n",
-    "        return x * torch.tanh(torch.nn.functional.softplus(x))\n",
-    "    \n",
-    "class DSReLU(nn.Module):\n",
-    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "    def __init__(self, k=10):\n",
-    "        super(DSReLU, self).__init__()\n",
-    "        self.a = torch.tensor(math.tan(math.radians(80)), dtype=torch.float32, device=device)\n",
-    "        self.b = torch.tensor(math.tan(math.radians(15)), dtype=torch.float32, device=device)\n",
-    "        self.k = k\n",
-    "        self.t = 0\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        t_tensor = torch.tensor(self.t, dtype=x.dtype, device=x.device)\n",
-    "        s_t = self.a + (self.b - self.a) / (1 + torch.exp(-self.k * (t_tensor - 0.5)))\n",
-    "        return torch.where(x > 0, x * s_t, x)\n",
-    "\n",
-    "    def increment_t(self, num_batches):\n",
-    "        self.t += 1 / num_batches"
+    "    return model "
    ]
   },
   {
